--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -75,7 +75,7 @@ These assumptions have been made to find the right trade-off of the speed of com
 \subsection{Mixture adsorption: Grand Canonical Monte Carlo}\label{sct:GCMC}
 
 %intro 
-As explained before, we can think of adsorption as a gas--solid or liquid--solid interfacial phenomenon, the adsorbate phase fills the accessible pore volumes depending on the physical conditions the material is put under. No simple model can predict how the adsorbates would interact with the pore surface, tha number of atoms that can fit in, the most stable configuration, etc. To answer these questions, we can evaluate all possible adsorption configurations that would undeniably have different numbers of adsorbate, and only keep the most thermodynamically plausible ones. To do so, these configurations will have to follow a pre-defined probability distribution, the grand canonical ensemble probability for instance, because it allows the variation of the number of molecules (adsorbate molecules) and the total energy. Using a Monte Carlo simulation, it is possible to vary the energy and the loading inside the pores so that the distribution of configurations $c$ follows this probability law: 
+As explained before, we can think of adsorption as a gas--solid or liquid--solid interfacial phenomenon, the adsorbate phase fills the accessible pore volumes depending on the physical conditions the material is put under. No simple model can predict how the adsorbates would interact with the pore surface, tha number of atoms that can fit in, the most stable configuration, etc. To answer these questions, we can evaluate all possible adsorption configurations that would undeniably have different numbers of adsorbate, and only keep the most thermodynamically plausible ones. To achieve this, these configurations will have to follow a pre-defined probability distribution, the grand canonical ensemble probability for instance, because it allows the variation of the number of molecules (adsorbate molecules) and the total energy. Using a Monte Carlo simulation, it is possible to vary the energy and the loading inside the pores so that the distribution of configurations $c$ follows this probability law: 
 \begin{equation}\label{eq:gc}
   P_c = \dfrac{1}{\Xi}e^{-\beta\left(E_c-\mu N_c\right)} 
 \end{equation}
