--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -585,7 +585,7 @@ Now, if I go back to the exchange thermodynamic quantities that are more relevan
 
 Although the previous quantities are valuable in modeling the adsorption at ambient pressure, they are still not enough, since they describe a state where the atoms are adsorbed on the most attractive sites only. The ambient-pressure state is actually characterized by an adsorption on a more diverse set of sites and with an increasingly important role of the guest--host interaction, which are also the main factors that contribute to the difference in selectivity between both pressure conditions and identified in the previous chapter.
 
-In this section, I introduce a descriptor that better describes the energy distribution in the ambient-pressure case by increasing the weight of the more energetic adsorption sites. To do so the easiest way was to increase the temperature in the Boltzmann averaging for both the Gibbs free energy and the enthalpy defined in equations~\ref{eq:ads_gibbs} and~\ref{eq:ads_enthalpy}. Many temperatures were tested, and the one that yielded the higher correlation coefficient when comparing the adsorption enthalpies (infinite dilution and ambient pressure) was chosen. 
+In this section, I introduce a descriptor that better describes the energy distribution in the ambient-pressure case by increasing the weight of the more energetic adsorption sites. To achieve this the easiest way was to increase the temperature in the Boltzmann averaging for both the Gibbs free energy and the enthalpy defined in equations~\ref{eq:ads_gibbs} and~\ref{eq:ads_enthalpy}. Many temperatures were tested, and the one that yielded the higher correlation coefficient when comparing the adsorption enthalpies (infinite dilution and ambient pressure) was chosen. 
 
 A temperature of \SI{900}{\kelvin} was found to be the optimal temperature to describe an ambient-pressure adsorption enthalpy of xenon across the structures of CoRE MOF 2019, and gives a minimal error (RMSE) of \SI{1.76}{\kilo\joule\per\mole} instead of \SI{2.87}{\kilo\joule\per\mole} for the \SI{298}{\kelvin} case. This improvement impacts the exchange free energy metrics as well as the adsorption enthalpy associated with the separation of xenon from krypton. The exchange Gibbs free energy and the adsorption enthalpy of xenon at ambient pressure are better correlated to the equivalent values at lower pressure and higher temperature (\SI{900}{\kelvin}) than to the \SI{298}{\kelvin} case. These observations support the use of higher temperature averaging to describe the ambient-pressure selectivity.
 
