--- a/4-ml.tex
+++ b/4-ml.tex
@@ -39,7 +39,7 @@ The challenge of supervised learning lies in the fact that the data at our dispo
     \caption{Illustration of the core principle of supervised learning.}\label{fgr:supervised_leaning}
 \end{figure}
 
-To do so, the learning algorithm uses a ``predictor'' $f$ that can be defined as the function that associates values (features) from $\mathcal{X}=\mathbb{R}^{p}$ to values of $\mathcal{Y}$. By changing the learning model (subsection~\ref{sct:model}) or by changing the feature space $\mathcal{X}$ we can define different domains $\mathcal{F}\subseteq{\mathcal{Y}}^{\mathcal{X}}$ where we search for the prediction function $f$. The domain $\mathcal{F}$ can either be too restrictive and the optimum function found is too far from the theoretical one, or be too large and the optimization problem is nearly impossible to solve or the solution is way too close to the data, which raises question of fitting that will be discussed later.
+To achieve this, the learning algorithm uses a ``predictor'' $f$ that can be defined as the function that associates values (features) from $\mathcal{X}=\mathbb{R}^{p}$ to values of $\mathcal{Y}$. By changing the learning model (subsection~\ref{sct:model}) or by changing the feature space $\mathcal{X}$ we can define different domains $\mathcal{F}\subseteq{\mathcal{Y}}^{\mathcal{X}}$ where we search for the prediction function $f$. The domain $\mathcal{F}$ can either be too restrictive and the optimum function found is too far from the theoretical one, or be too large and the optimization problem is nearly impossible to solve or the solution is way too close to the data, which raises question of fitting that will be discussed later.
 
 This predictor can be interpreted as the function that gives the most probable outcome $y$ for a given input $\mathbf{x}$. To evaluate the quality of the predictor, we can introduce a loss function $\mathcal{L}:\mathcal{Y}\times\mathcal{Y} \rightarrow \mathbb{R}^{p}$ that compares the predicted value $f(\mathbf{x})$ to the true value $y$ on the dataset at our disposal $\mathcal{D}_{n}$. This loss function needs to increase when $f(\mathbf{x})$ moves away from $y$. To extend the definition of the loss to the entire possible space, we can introduce the theoretical risk $\mathcal{R}$ of a predictor $h$ using the random variables $X$ and $Y$ so that $\mathcal{R}(h) = \E{\mathcal{L}\left(h(X),Y\right)}$. However, since we do not know the exact mapping of the random variables, we will rather evaluate empirically the risk $\mathcal{R}_n$ on the known dataset $\mathcal{D}_{n}$:
 \begin{equation}\label{eq:risk}
@@ -460,7 +460,7 @@ In the next sections, I will introduce new descriptors for nanoporous materials,
 
 \subsubsection{Hyperparameter optimization}\label{sct:hyperparameter}
 
-A hyperparameter search consists in finding the best model to optimize the generalization error as defined in equation~\ref{eq:generalization_error}. To do so, the most common strategy consists in doing cross-validations to evaluate different model configurations. This process is called the hyperparameter search or optimization. Here, I used the randomized search algorithm to find the best parameters within a predefined reasonable range of parameters. A set of optimal hyperparameters (please refer to Table~\ref{tab:hyperparameter} for the meaning of the parameters) for our final ML model was found using a random search of 30,000 iterations on the parameter space described by following python dictionary:
+A hyperparameter search consists in finding the best model to optimize the generalization error as defined in equation~\ref{eq:generalization_error}. To achieve this, the most common strategy consists in doing cross-validations to evaluate different model configurations. This process is called the hyperparameter search or optimization. Here, I used the randomized search algorithm to find the best parameters within a predefined reasonable range of parameters. A set of optimal hyperparameters (please refer to Table~\ref{tab:hyperparameter} for the meaning of the parameters) for our final ML model was found using a random search of 30,000 iterations on the parameter space described by following python dictionary:
 
 \begin{lstlisting}[language=Python]
 params = {
