--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -69,7 +69,7 @@ To understand it, I will start by explaining what a window algorithm would do an
 First, let us consider a single MD trajectory of duration $t\e{tot}=N\e{tot}\delta t$. This trajectory can be used to generate displacement of any size $\tau$. Naively, we can start by taking ${\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert}^2$ as a square displacement of a sub-trajectory $\mathcal{T}(0\rightarrow\tau)$ of duration $\tau$. 
 However, it is not enough to make a statistically meaningful average of the MSD as described in the Einstein equation\ref{eq:einstein}. Using the hypothesis of independence between two movements of the same particle separated by a time $\delta t$ used in Einstein's paper~\cite{einstein1905motion}, a shift of the origin of time by $\delta t$ would generate another trajectory. We can repeat this process $i$ times while $\tau + i\delta t\leq t\e{tot}$. This would be very accurate, but also very inefficient in the case where $\tau \gg \delta t$ since two consecutive sub-trajectories $\mathcal{T}(i\delta t\rightarrow\tau+i\delta t)$ and $\mathcal{T}((i+1)\delta t\rightarrow\tau+(i+1)\delta t)$ would be very similar. 
 
-To efficiently sample the trajectory into sub-trajectories that are independent we can use a sampling time step of $\delta \tau\lesssim\tau$ chosen to be in the same order of magnitude as $\tau$. To do so, the window approach would first define a value $\delta \tau$ and generate $N_{\tau} = \lfloor(t\e{t ot} -\tau)/ \delta\tau \rfloor$ different sub-trajectories $\left\{\mathcal{T}(0\rightarrow\tau), \mathcal{T}(\delta\tau\rightarrow\tau + \delta\tau), \ldots, \mathcal{T}(N_{\tau}\delta\tau\rightarrow\tau + N_{\tau}\delta\tau)\right\}$ of duration $\tau=k\delta\tau$, where $k$ is an integer between $1$ and $K$ that defines the time window we want to sample. By doing so, we get the MSD $\langle {r(\tau)}^2 \rangle$ for duration values $\tau$ equal to $\delta\tau, \ldots, K\delta\tau$. The relation $\langle {r(\tau)}^2 \rangle$ can then be fitted to the equation~\ref{eq:einstein} to obtain the diffusion coefficient if the relation is linear. The trajectory generation of the window approach is illustrated on Figure~\ref{fgr:window_msd} for a decomposition into sub-trajectories of a duration $\tau=3\delta\tau$ shifted by $\delta\tau$.
+To efficiently sample the trajectory into sub-trajectories that are independent we can use a sampling time step of $\delta \tau\lesssim\tau$ chosen to be in the same order of magnitude as $\tau$. To achieve this, the window approach would first define a value $\delta \tau$ and generate $N_{\tau} = \lfloor(t\e{t ot} -\tau)/ \delta\tau \rfloor$ different sub-trajectories $\left\{\mathcal{T}(0\rightarrow\tau), \mathcal{T}(\delta\tau\rightarrow\tau + \delta\tau), \ldots, \mathcal{T}(N_{\tau}\delta\tau\rightarrow\tau + N_{\tau}\delta\tau)\right\}$ of duration $\tau=k\delta\tau$, where $k$ is an integer between $1$ and $K$ that defines the time window we want to sample. By doing so, we get the MSD $\langle {r(\tau)}^2 \rangle$ for duration values $\tau$ equal to $\delta\tau, \ldots, K\delta\tau$. The relation $\langle {r(\tau)}^2 \rangle$ can then be fitted to the equation~\ref{eq:einstein} to obtain the diffusion coefficient if the relation is linear. The trajectory generation of the window approach is illustrated on Figure~\ref{fgr:window_msd} for a decomposition into sub-trajectories of a duration $\tau=3\delta\tau$ shifted by $\delta\tau$.
 
 \begin{figure}[ht]
   \centering
@@ -102,7 +102,7 @@ The lattice kinetic Monte Carlo method relies on a pre-defined lattice of stable
 
 \subsubsection{Transition state theory for diffusion}
 
-The transition state theory is usually used in chemistry to explain the kinetics of a reaction. To do so it compares the energy of the reactants before reacting and the one of the transition state to calculate the rate of the reaction. This reaction rate along a reaction path is proportional to the ratio of the Boltzmann factor at the transition state and the integration of the Boltzmann factors along the reaction path.
+The transition state theory is usually used in chemistry to explain the kinetics of a reaction. To achieve this it compares the energy of the reactants before reacting and the one of the transition state to calculate the rate of the reaction. This reaction rate along a reaction path is proportional to the ratio of the Boltzmann factor at the transition state and the integration of the Boltzmann factors along the reaction path.
 
 This definition can be directly transposed to the case of a diffusion path instead of a reaction path, and we can define the diffusion rate $\mathcal{R}_{0\rightarrow 1}$ from site $0$ to $1$ as follows:
 \begin{equation}\label{eq:trans_rate_path}
@@ -253,7 +253,7 @@ The last comparison is made with a thermodynamic quantity, the xenon adsorption 
 
 \subsection{A trade-off between the selectivity and the diffusion}
 
-In this section, I will analyze the screening of the diffusion and selectivity properties calculated for xenon and krypton to identify interesting materials that presents both a good Xe/Kr selectivity and a good Xe/Kr diffusion coefficient ratio. To do so I also performed a diffusion coefficient screening for krypton, and I end up with 4,816 structures that has good determination coefficient for both linear fits of xenon and krypton MSD. These structures are then tested to find materials with a good balance between thermodynamic and kinetic properties for the xenon/krypton separation.
+In this section, I will analyze the screening of the diffusion and selectivity properties calculated for xenon and krypton to identify interesting materials that presents both a good Xe/Kr selectivity and a good Xe/Kr diffusion coefficient ratio. To achieve this, I also performed a diffusion coefficient screening for krypton, and I end up with 4,816 structures that has good determination coefficient for both linear fits of xenon and krypton MSD. These structures are then tested to find materials with a good balance between thermodynamic and kinetic properties for the xenon/krypton separation.
 
 \subsubsection{Screening of diffusion selectivity values: a trade-off between adsorption and diffusion}\label{sct:diff_screen}
 
@@ -475,7 +475,7 @@ I am currently at the last step of the development of this detection algorithm, 
 
 \subsection{Calculation of diffusion activation energy}
 
-Since we only want to determine the activation energy, we can skip the more computationnally demanding TS detection and kinetic Monte Carlo steps. To do so we can simply use the breadth-first search algorithm to label the different connected components inside a given channel between $E\e{min}$ and $E\e{min}+i\delta E$ (at the $i$\ex{th} iteration). When the number of connected components changes between two energy values $E$ and $E+\delta E$, there are new components appearing or old components that merged or both happening at the same time. By looking at the number of connected components, the code automatically detects the energy $E\e{barrier}$ at which the components connect back together and form a channel (possibility to go from one boundary to another). This energy corresponds to the energy required to be able to diffuse through a channel. Then, the activation energy $E\e{a}$ simply corresponds to the difference between this barrier energy $E\e{barrier}$ just calculated and the minimal energy $E\e{min}$ within the channel. 
+Since we only want to determine the activation energy, we can skip the more computationnally demanding TS detection and kinetic Monte Carlo steps. To achieve this we can simply use the breadth-first search algorithm to label the different connected components inside a given channel between $E\e{min}$ and $E\e{min}+i\delta E$ (at the $i$\ex{th} iteration). When the number of connected components changes between two energy values $E$ and $E+\delta E$, there are new components appearing or old components that merged or both happening at the same time. By looking at the number of connected components, the code automatically detects the energy $E\e{barrier}$ at which the components connect back together and form a channel (possibility to go from one boundary to another). This energy corresponds to the energy required to be able to diffuse through a channel. Then, the activation energy $E\e{a}$ simply corresponds to the difference between this barrier energy $E\e{barrier}$ just calculated and the minimal energy $E\e{min}$ within the channel. 
 
 In the case of KAXQIL, we can carry out a barrier detection using an energy step $\delta E$ of \SI{0.3}{\kJ\per\mol}. There is only one symmetrically unique type of channel in KAXQIL with a minimal energy of $-44.3$~\si{\kJ\per\mole} --- the different channels shown on Figure~\ref{fgr:KAXQIL_channel} are all symmetrically equivalent. The code only detects one merge that leads to an all connected component inside the channel. This merge occurs for an energy of $-25.7$~\si{\kJ\per\mole} (as shown on Figure~\ref{fgr:KAXQIL_23}), which means that the activation energy is estimated to be $18.6$~\si{\kJ\per\mole} with an error of \SI{0.3}{\kJ\per\mole} (due to the energy step considered). 
 
